# Au-scan-it-

./: ARCHITECTURE.md  AUTO_PAPER_TRADING_V22.md  App.jsx  CBA.csv  DEPLOY_V20_FRONTEND_FALLBACK_FIX.md  FRONTEND_HEDGE_FUND_REDESIGN.md  FRONTEND_US_STYLE_UPDATE.md  GITHUB_PUSH_STEPS.md  Makefile  README.md  REAL_DATA_AND_MARKET_CLOCK.md  RENDER_DEPLOYMENT.md  TESTING_AND_GITHUB.md  UPLOAD_FRIENDLY_GITHUB.md  V17_FRONTEND_REBUILD.md  api.py  audit.py  config.py  default.example.json  download (1)  env.example  explain.py  index.html  indicators.py  keepalive_render.py  market_clock.py  package (4).json  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  risk.py  sample_watchlist.csv  scanner.py  server.js  server.mjs  styles.css  test_api.py  test_auto_paper.py  (+5 more)
data/sample/: sample_watchlist.csv
docs/: ALERTS_VOICE_AND_HEATMAP.md  AUTO_PAPER_TRADING_V22.md  BUILD_STATUS.md  DEPLOY_V19_RENDER_FIX.md  DEPLOY_V20_FRONTEND_FALLBACK_FIX.md  PAPER_TRADING.md  REAL_DATA_AND_MARKET_CLOCK.md  RENDER_DEPLOYMENT.md  RENDER_JSON_PARSE_FIX.md  V17_FRONTEND_REBUILD.md
frontend/: package-lock.json  package.json
outputs/: audit_log.jsonl  backtest_results.csv  scanner_output.csv  scanner_output.json  verification_summary.txt
paper_accounts/: default.json
public/: app.js  index.html  styles.css
scripts/: verify_frontend_build.mjs
templates/: Australian_Trade_Finder_Template.xlsx
tests/: test_api.py  test_auto_paper.py  test_backtest.py  test_costs.py  test_institutional.py  test_paper.py  test_risk.py  test_scanner.py  test_scoring.py
(+11 files in other folders)
