[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asx-trade-finder"
version = "0.2.0"
description = "Australian Traders Success Formula scanner, backtester and paper account."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "numpy>=1.24", "fastapi>=0.110", "uvicorn>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
